--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 app.openai.api.key=${OPENAI_API_KEY}
-app.openai.api.assistant.id=${OPENAI_API_ASSISTANT_ID}
+app.openai.assistant.id=${OPENAI_API_ASSISTANT_ID}
